erDiagram
    %% ===== ORGANIZATION DOMAIN =====
    Organization {
        uuid id PK
        string name
        string slug UK
        string legal_registration_number
        string contact_email
        datetime created_at
        datetime updated_at
    }

    UserGroup {
        uuid id PK
        uuid organization_id FK
        string name
        enum type "STAFF|ASSOCIATION|EXHIBITOR|PLAYER_CLUB"
        boolean is_public
        datetime created_at
        datetime updated_at
    }

    GroupPermission {
        uuid id PK
        uuid user_group_id FK
        string resource
        string action
    }

    %% ===== USER DOMAIN =====
    User {
        uuid id PK
        string email UK
        string hashed_password
        string full_name
        enum global_role "SUPER_ADMIN|ADMIN|USER"
        string timezone
        string locale
        date birth_date "Issue 73 - JS.X2"
        boolean is_active
        datetime privacy_accepted_at "Issue 47 - GDPR consent"
        boolean email_verified "Issue 73"
        string email_verification_token "Issue 73"
        datetime email_verification_sent_at "Issue 73"
        string pending_email "Issue 60"
        string pending_email_token "Issue 60"
        datetime pending_email_sent_at "Issue 60"
        string password_reset_token "Issue 60"
        datetime password_reset_sent_at "Issue 60"
        datetime last_login
        datetime created_at
        datetime updated_at
    }

    UserGroupMembership {
        uuid id PK
        uuid user_id FK
        uuid user_group_id FK
        enum group_role "OWNER|ADMIN|MEMBER"
        datetime joined_at
    }

    UserExhibitionRole {
        uuid id PK
        uuid user_id FK
        uuid exhibition_id FK
        enum role "ORGANIZER|PARTNER"
        jsonb zone_ids "Issue 99 - For PARTNER only"
        datetime created_at
        datetime updated_at
    }

    %% ===== EXHIBITION DOMAIN =====
    Exhibition {
        uuid id PK
        uuid organization_id FK
        uuid created_by_id FK "Issue 99 - Main organizer"
        string title
        string slug UK
        text description
        jsonb title_i18n "Issue 34 - i18n translations"
        jsonb description_i18n "Issue 34 - i18n translations"
        datetime start_date
        datetime end_date
        string timezone
        int grace_period_minutes
        string location_name
        string address
        string city
        string country_code
        jsonb settings
        enum status "DRAFT|PUBLISHED|ARCHIVED"
        boolean is_registration_open "Issue 39"
        datetime registration_opens_at "Issue 39"
        datetime registration_closes_at "Issue 39"
        boolean requires_registration "Issue 77 - Optional registration requirement"
        string primary_language "Issue 39"
        jsonb secondary_languages "Issue 39"
        datetime created_at
        datetime updated_at
    }

    ExhibitionRegistration {
        uuid id PK
        uuid user_id FK
        uuid exhibition_id FK
        datetime registered_at
        datetime cancelled_at "nullable - soft delete"
    }

    TimeSlot {
        uuid id PK
        uuid zone_id FK "Issue 105 - Moved from exhibition to zone"
        string name
        datetime start_time
        datetime end_time
        int max_duration_minutes
        int buffer_time_minutes
        datetime created_at
        datetime updated_at
    }

    Zone {
        uuid id PK
        uuid exhibition_id FK
        uuid delegated_to_group_id FK "Deprecated - use UserExhibitionRole"
        string name
        text description
        jsonb name_i18n "Issue 34 - i18n translations"
        jsonb description_i18n "Issue 34 - i18n translations"
        enum type "RPG|BOARD_GAME|WARGAME|TCG|DEMO|MIXED"
        boolean moderation_required "Issue 10 - Public sessions need moderation"
        boolean allow_public_proposals "Issue 10 - Public can propose sessions"
        string table_prefix "Issue 93 - Auto table numbering prefix"
        datetime created_at
        datetime updated_at
    }

    PhysicalTable {
        uuid id PK
        uuid zone_id FK
        string label
        int capacity
        enum status "AVAILABLE|OCCUPIED|RESERVED|MAINTENANCE"
        datetime created_at
        datetime updated_at
    }

    SafetyTool {
        uuid id PK
        uuid exhibition_id FK
        string name
        string slug
        text description
        jsonb name_i18n "Issue 34 - i18n translations"
        jsonb description_i18n "Issue 34 - i18n translations"
        string url
        boolean is_required
        int display_order
        datetime created_at
        datetime updated_at
    }

    %% ===== GAME DOMAIN =====
    GameCategory {
        uuid id PK
        string name
        string slug UK
        jsonb name_i18n "Issue 34 - i18n translations"
    }

    Game {
        uuid id PK
        uuid category_id FK
        string title
        string external_provider_id "GROG sync - slug"
        string external_provider "Issue 55 - grog|bgg|manual"
        string external_url "Issue 55 - Full URL to game page"
        string cover_image_url "Issue 55 - Cover image URL"
        array themes "Issue 55 - Theme tags"
        datetime last_synced_at "Issue 55 - Last sync timestamp"
        string publisher
        text description
        enum complexity "BEGINNER|INTERMEDIATE|EXPERT"
        int min_players
        int max_players
        datetime created_at
        datetime updated_at
    }

    GameSession {
        uuid id PK
        uuid exhibition_id FK
        uuid time_slot_id FK
        uuid physical_table_id FK "nullable"
        uuid game_id FK
        uuid provided_by_group_id FK "nullable - Partner"
        uuid created_by_user_id FK
        string title
        text description
        string language
        int min_age
        int max_players_count
        jsonb safety_tools "Selected tools slugs"
        boolean is_accessible_disability
        enum status "DRAFT|PENDING_MODERATION|CHANGES_REQUESTED|VALIDATED|REJECTED|IN_PROGRESS|FINISHED|CANCELLED"
        string rejection_reason
        datetime scheduled_start
        datetime scheduled_end
        datetime gm_checked_in_at
        datetime actual_start
        datetime actual_end
        int actual_player_count "Issue 35 - Session report"
        string table_condition "Issue 35 - CLEAN|NEEDS_CLEANING|DAMAGED"
        string end_notes "Issue 35 - Session report notes"
        datetime created_at
        datetime updated_at
    }

    Booking {
        uuid id PK
        uuid game_session_id FK
        uuid user_id FK
        enum role "GM|PLAYER|ASSISTANT|SPECTATOR"
        enum status "PENDING|CONFIRMED|WAITING_LIST|CHECKED_IN|ATTENDED|NO_SHOW|CANCELLED"
        datetime checked_in_at
        datetime registered_at
        datetime updated_at
    }

    ModerationComment {
        uuid id PK
        uuid game_session_id FK
        uuid user_id FK
        string content "max 2000 chars"
        datetime created_at
        datetime updated_at
    }

    %% ===== MEDIA DOMAIN =====
    Media {
        uuid id PK
        uuid uploaded_by_user_id FK
        string filename
        string content_type
        string storage_path
        int file_size
        datetime created_at
    }

    AuditLog {
        uuid id PK
        string entity_type
        uuid entity_id
        string action
        uuid user_id FK
        jsonb changes
        datetime created_at
    }

    %% ===== EVENT REQUEST DOMAIN (Issue 92) =====
    EventRequest {
        uuid id PK
        uuid requester_id FK
        enum status "PENDING|CHANGES_REQUESTED|APPROVED|REJECTED"
        string event_title
        string event_slug
        text event_description
        datetime event_start_date
        datetime event_end_date
        string event_location_name
        string event_city
        string event_country_code
        string event_region
        string event_timezone
        string organization_name
        string organization_slug
        string organization_contact_email
        string organization_legal_number
        string requester_message "max 2000 chars"
        uuid reviewed_by_id FK "nullable"
        datetime reviewed_at
        string admin_comment "max 2000 chars"
        uuid created_exhibition_id FK "nullable - set on approval"
        uuid created_organization_id FK "nullable - set on approval"
        datetime created_at
        datetime updated_at
    }

    %% ===== NOTIFICATION DOMAIN =====
    Notification {
        uuid id PK
        uuid user_id FK
        enum notification_type "SESSION_CANCELLED|BOOKING_CONFIRMED|WAITLIST_PROMOTED|SESSION_REMINDER|MODERATION_COMMENT|SESSION_APPROVED|SESSION_REJECTED|CHANGES_REQUESTED"
        enum channel "EMAIL|PUSH|IN_APP"
        string subject
        text body
        jsonb context "Contextual data for templates"
        boolean is_read
        datetime read_at
        boolean email_sent
        datetime email_sent_at
        string email_error
        datetime created_at
    }

    %% ===== RELATIONSHIPS =====
    Organization ||--o{ UserGroup : "has"
    Organization ||--o{ Exhibition : "organizes"

    UserGroup ||--o{ GroupPermission : "has"
    UserGroup ||--o{ UserGroupMembership : "has members"
    UserGroup ||--o{ Zone : "manages (deprecated)"
    UserGroup ||--o{ GameSession : "provides"

    User ||--o{ UserGroupMembership : "belongs to"
    User ||--o{ UserExhibitionRole : "has exhibition roles"
    User ||--o{ ExhibitionRegistration : "registers to (Issue 77)"
    User ||--o{ Exhibition : "creates (main organizer)"
    User ||--o{ GameSession : "creates"
    User ||--o{ Booking : "books"
    User ||--o{ Media : "uploads"
    User ||--o{ ModerationComment : "writes"
    User ||--o{ Notification : "receives"

    Exhibition ||--o{ UserExhibitionRole : "has role assignments"
    Exhibition ||--o{ ExhibitionRegistration : "has registrations (Issue 77)"
    Exhibition ||--o{ Zone : "contains"
    Exhibition ||--o{ SafetyTool : "defines"
    Exhibition ||--o{ GameSession : "hosts"

    Zone ||--o{ PhysicalTable : "contains"
    Zone ||--o{ TimeSlot : "has (Issue 105)"

    PhysicalTable ||--o{ GameSession : "hosts"

    TimeSlot ||--o{ GameSession : "schedules"

    GameCategory ||--o{ Game : "categorizes"
    Game ||--o{ GameSession : "played at"

    GameSession ||--o{ Booking : "has"
    GameSession ||--o{ ModerationComment : "has"

    User ||--o{ EventRequest : "submits (Issue 92)"
    User ||--o{ EventRequest : "reviews (Issue 92)"
    EventRequest ||--o| Exhibition : "creates (Issue 92)"
    EventRequest ||--o| Organization : "creates (Issue 92)"
